--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -295,7 +295,7 @@ nav a {
     width: 80px;
     transition: .1s linear;
     transition-delay: .2s;
-    z-index: 2;
+    z-index: 3;
 
 }
 
